--- a/src/main/resources/templates/brugerdata.html
+++ b/src/main/resources/templates/brugerdata.html
@@ -4,11 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Brugerdata</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title> Brugerdata </title>
 </head>
 
 <p>
@@ -20,18 +19,24 @@
     <span th:text="${bruger.sms}" />
     <span th:text="${bruger.email}" />
     <span th:text="${bruger.niveau}" />
-
     <!-- link til update af bruger -->
-    <a style="color: green;" th:href="@{'/opdater/' + ${bruger.brugerId}}">opdater</a>
-
-    <!-- rødt link til slet af bruger -->
-    <a style="color:red;" th:href="@{'/delete/' + ${bruger.brugerId}}">slet</a>
 </p>
-
 
 
 <!-- link til create ny person -->
 <form action="/create" method="get">
+    <button type="submit" class="btn btn-primary"> Opret ny Bruger </button>
+</form>
+
+<form action="/update" method="get">
+    <button type="submit" class="btn btn-primary"> Opdater bruger </button>
+</form>
+
+<form action="/delete" method="get">
+    <button type="submit" class="btn btn-primary"> Slet bruger </button>
+</form>
+
+<form action="/frontPage" method="get">
     <button type="submit" class="btn btn-primary"> Opret ny Bruger </button>
 </form>
 
